# zombie-hunter

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
k8s/: configmap.yaml  cronjob.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml
tests/: __init__.py  test_cost_estimator.py  test_resource_types.py
zombie_hunter/: __init__.py  config.py  main.py
zombie_hunter/cost/: __init__.py  estimator.py
zombie_hunter/resources/: __init__.py  types.py
zombie_hunter/scanners/: __init__.py  aws.py  azure.py  base.py  gcp.py  mock.py
zombie_hunter/slack/: __init__.py  interactive.py  notifier.py
